added namespace to .wp_bootstrap to less files

--- a/less/accordion.less
+++ b/less/accordion.less
@@ -1,7 +1,7 @@
 // ACCORDION
 // ---------
 
-
+.wp_bootstrap {
 // Parent container
 .accordion {
   margin-bottom: @baseLineHeight;
@@ -25,4 +25,5 @@
 .accordion-inner {
   padding: 9px 15px;
   border-top: 1px solid #e5e5e5;
+}
 }
