--- a/less/carousel.less
+++ b/less/carousel.less
@@ -1,6 +1,6 @@
 // CAROUSEL
 // --------
-
+.wp_bootstrap {
 .carousel {
   position: relative;
   margin-bottom: @baseLineHeight;
@@ -118,4 +118,5 @@
 .carousel-caption h4,
 .carousel-caption p {
   color: @white;
+}
 }
