--- a/less/close.less
+++ b/less/close.less
@@ -1,6 +1,6 @@
 // CLOSE ICONS
 // -----------
-
+.wp_bootstrap {
 .close {
   float: right;
   font-size: 20px;
@@ -15,4 +15,5 @@
     .opacity(40);
     cursor: pointer;
   }
+}
 }
