--- a/less/code.less
+++ b/less/code.less
@@ -1,7 +1,7 @@
 // Code.less
 // Code typography styles for the <code> and <pre> elements
 // --------------------------------------------------------
-
+.wp_bootstrap {
 // Inline and block code styles
 code,
 pre {
@@ -54,4 +54,5 @@ pre {
 .pre-scrollable {
   max-height: 340px;
   overflow-y: scroll;
+}
 }
