--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -1,6 +1,6 @@
 // DROPDOWN MENUS
 // --------------
-
+.wp_bootstrap {
 // Use the .menu class on any <li> element within the topbar or ul.tabs and you'll get some superfancy dropdowns
 .dropdown {
   position: relative;
@@ -127,4 +127,5 @@
 .typeahead {
   margin-top: 2px; // give it some space to breathe
   .border-radius(4px);
+}
 }
