--- a/less/forms.less
+++ b/less/forms.less
@@ -5,7 +5,7 @@
 
 // GENERAL STYLES
 // --------------
-
+.wp_bootstrap {
 // Make all forms have space below them
 form {
   margin: 0 0 @baseLineHeight;
@@ -519,4 +519,5 @@ legend + .control-group {
   .form-actions {
     padding-left: 160px;
   }
+}
 }
