--- a/less/labels.less
+++ b/less/labels.less
@@ -1,6 +1,6 @@
 // LABELS
 // ------
-
+.wp_bootstrap {
 // Base
 .label {
   padding: 2px 4px 3px;
@@ -30,3 +30,4 @@
 
 .label-info             { background-color: @infoText; }
 .label-info:hover       { background-color: darken(@infoText, 10%); }
+}
