--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,6 +1,6 @@
 // NAVBAR (FIXED AND STATIC)
 // -------------------------
-
+.wp_bootstrap {
 
 // COMMON STYLES
 // -------------
@@ -296,4 +296,5 @@
     left: auto;
     right: 13px;
   }
+}
 }
