--- a/less/pager.less
+++ b/less/pager.less
@@ -1,6 +1,6 @@
 // PAGER
 // -----
-
+.wp_bootstrap {
 .pager {
   margin-left: 0;
   margin-bottom: @baseLineHeight;
@@ -27,4 +27,5 @@
 }
 .pager .previous a {
   float: left;
+}
 }
