--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -4,7 +4,7 @@
 
 // ANIMATIONS
 // ----------
-
+.wp_bootstrap {
 // Webkit
 @-webkit-keyframes progress-bar-stripes {
   from  { background-position: 0 0; }
@@ -92,4 +92,5 @@
 }
 .progress-info.progress-striped .bar {
   #gradient > .striped(#5bc0de);
+}
 }
