--- a/less/responsive.less
+++ b/less/responsive.less
@@ -23,7 +23,7 @@
 
 // RESPONSIVE CLASSES
 // ------------------
-
+.wp_bootstrap {
 // Hide from screenreaders and browsers
 // Credit: HTML5 Boilerplate
 .hidden {
@@ -324,4 +324,5 @@
     margin-left: 30px;
   }
 
+}
 }
