--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -18,12 +18,13 @@ body {
 
 // LINKS
 // -----
-
-a {
-  color: @linkColor;
-  text-decoration: none;
-}
-a:hover {
-  color: @linkColorHover;
-  text-decoration: underline;
+.wp_bootstrap {
+  a {
+    color: @linkColor;
+    text-decoration: none;
+  }
+  a:hover {
+    color: @linkColorHover;
+    text-decoration: underline;
+  }
 }
