--- a/less/tables.less
+++ b/less/tables.less
@@ -6,7 +6,7 @@
 
 // BASE TABLES
 // -----------------
-
+.wp_bootstrap {
 table {
   max-width: 100%;
   border-collapse: collapse;
@@ -147,4 +147,5 @@ table {
   .span10    { .tableColumns(10); }
   .span11    { .tableColumns(11); }
   .span12    { .tableColumns(12); }
+}
 }
