--- a/less/type.less
+++ b/less/type.less
@@ -5,7 +5,7 @@
 
 // BODY TEXT
 // ---------
-
+.wp_bootstrap {
 p {
   margin: 0 0 @baseLineHeight / 2;
   font-family: @baseFontFamily;
@@ -215,4 +215,5 @@ small {
 }
 cite {
   font-style: normal;
+}
 }
