--- a/less/utilities.less
+++ b/less/utilities.less
@@ -1,6 +1,6 @@
 // UTILITY CLASSES
 // ---------------
-
+.wp_bootstrap {
 // Quick floats
 .pull-right {
   float: right;
@@ -20,4 +20,5 @@
 // Visibility
 .invisible {
   visibility: hidden;
+}
 }
