--- a/less/hero-unit.less
+++ b/less/hero-unit.less
@@ -1,6 +1,6 @@
 // HERO UNIT
 // ---------
-
+.wp_bootstrap {
 .hero-unit {
   padding: 60px;
   margin-bottom: 30px;
@@ -17,4 +17,5 @@
     font-weight: 200;
     line-height: @baseLineHeight * 1.5;
   }
+}
 }
