--- a/less/layouts.less
+++ b/less/layouts.less
@@ -2,7 +2,7 @@
 // Layouts
 // Fixed-width and fluid (with sidebar) layouts
 // --------------------------------------------
-
+.wp_bootstrap {
 
 // Container (centered, fixed-width layouts)
 .container {
@@ -14,4 +14,5 @@
   padding-left: @gridGutterWidth;
   padding-right: @gridGutterWidth;
   .clearfix();
+}
 }
