--- a/less/navs.less
+++ b/less/navs.less
@@ -2,7 +2,7 @@
 // -----------
 
 
-
+.wp_bootstrap {
 // BASE CLASS
 // ----------
 
@@ -350,4 +350,5 @@
 .tabs-right .nav-tabs .active > a:hover {
   border-color: #ddd #ddd #ddd transparent;
   *border-left-color: @white;
+}
 }
