--- a/less/pagination.less
+++ b/less/pagination.less
@@ -1,6 +1,6 @@
 // PAGINATION
 // ----------
-
+.wp_bootstrap {
 .pagination {
   height: @baseLineHeight * 2;
   margin: @baseLineHeight 0;
@@ -52,4 +52,5 @@
 }
 .pagination-right {
   text-align: right;
+}
 }
