--- a/less/popovers.less
+++ b/less/popovers.less
@@ -1,6 +1,6 @@
 // POPOVERS
 // --------
-
+.wp_bootstrap {
 .popover {
   position: absolute;
   top: 0;
@@ -46,4 +46,5 @@
   p, ul, ol {
     margin-bottom: 0;
   }
+}
 }
