--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -1,6 +1,6 @@
 // THUMBNAILS
 // ----------
-
+.wp_bootstrap {
 .thumbnails {
   margin-left: -@gridGutterWidth;
   list-style: none;
@@ -32,4 +32,5 @@ a.thumbnail:hover {
 }
 .thumbnail .caption {
   padding: 9px;
+}
 }
