--- a/less/tooltip.less
+++ b/less/tooltip.less
@@ -1,6 +1,6 @@
 // TOOLTIP
 // ------=
-
+.wp_bootstrap {
 .tooltip {
   position: absolute;
   z-index: @zindexTooltip;
@@ -32,4 +32,5 @@
   position: absolute;
   width: 0;
   height: 0;
+}
 }
