--- a/less/wells.less
+++ b/less/wells.less
@@ -1,6 +1,6 @@
 // WELLS
 // -----
-
+.wp_bootstrap {
 .well {
   min-height: 20px;
   padding: 19px;
@@ -14,4 +14,5 @@
     border-color: #ddd;
     border-color: rgba(0,0,0,.15);
   }
+}
 }
