--- a/less/type.less
+++ b/less/type.less
@@ -109,6 +109,7 @@ ol {
 }
 li {
   line-height: @baseLineHeight;
+  margin-bottom:0;
 }
 ul.unstyled,
 ol.unstyled {
@@ -129,6 +130,7 @@ dt {
 }
 dd {
   margin-left: @baseLineHeight / 2;
+  margin-bottom:0;
 }
 
 // MISC
