--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -696,6 +696,14 @@ body {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+.wp_bootstrap input[type="text"],
+.wp_bootstrap input[type="password"],
+.wp_bootstrap textarea {
+  -moz-box-sizing: initial;
+  -webkit-box-sizing: initial;
+  -ms-box-sizing: initial;
+  box-sizing: initial;
+}
 .wp_bootstrap input[type="button"],
 .wp_bootstrap input[type="reset"],
 .wp_bootstrap input[type="submit"] {
